syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_package = "org.stypox.dicio.skills.checklist";
option java_multiple_files = true;

message SkillSettingsChecklist {
  repeated Checklist checklists = 1;

  uint32 execution_last_checklist_index = 2;
}

message Checklist {
  string checklist_name = 1;
  repeated ChecklistItem checklist_item = 2;

  ChecklistState execution_state = 3;
  google.protobuf.Timestamp execution_started_at = 4;
  uint32 execution_last_index = 5;
  google.protobuf.Timestamp execution_ended_at = 6;
}

enum ChecklistState {
  NOT_STARTED = 0;
  IN_PROGRESS = 1;
  COMPLETE = 2;
}

message ChecklistItem {
  string item_name = 1;

  ItemState execution_state = 2;
  google.protobuf.Timestamp execution_last_changed = 3;
}

enum ItemState {
  NOT_ASKED = 0;
  COMPLETED = 1;
  ASKED = 2;
  SKIPPED = 3;
}
